-Auth feature implemented[needs some refactoring, check offline behaviour]

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.devyat.number_trivia">
+    package="com.devyat.numbertrivia">
    <application
         android:label="number_trivia"
         android:icon="@mipmap/ic_launcher">
