--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   # Remote API
   internet_connection_checker: ^0.0.1+3
   http: ^0.13.4
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
   # Local cache
   shared_preferences: ^2.0.8
 
